--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -32,37 +32,37 @@
  <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / </div>
+  <div class="numbertext">1 / 6</div>
   <img src="psvr.jpg" style="width:100%">
   <div class="text">Playstation VR - $349</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / </div>
+  <div class="numbertext">2 / 6</div>
   <img src="rifts.jpg" style="width:100%">
   <div class="text">Oculus Rift S - $399</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">3 / 6</div>
   <img src="googledaydream.jpg" style="width:100%">
   <div class="text">Google Daydream - $99 </div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">4 / </div>
+  <div class="numbertext">4 / 6</div>
   <img src="htc.jpg" style="width:100%">
   <div class="text">HTC Vive - $474.99 </div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">5 / </div>
+  <div class="numbertext">5 / 6</div>
   <img src="labo.jpg" style="width:100%">
   <div class="text">Nintendo Labo VR - $79.99 </div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">6 / </div>
+  <div class="numbertext">6 / 6</div>
   <img src="quest.jpg" style="width:100%">
   <div class="text">Oculus Quest- $399 </div>
 </div>
