--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -5,6 +5,9 @@
 <!-- Metadata -->
 <link rel="stylesheet" type="text/css" href="design.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.mySlides {display:none;}
+</style>
 <script src="script.js"></script>
 </head>
 <body>
@@ -23,67 +26,60 @@
   <a href="../References/main.html">References</a>
 </div>
 
-<div class="content">
-  <h3>Current VR availible.</h3>
- 
-  
-  
-  
- <div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 6</div>
+<div class="w3-container">
+  <h2>Slideshow Caption</h2>
+  <p>Add a caption text for each image slide with the w3-display-* classes (topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle).</p>
+</div>
+
+<div class="w3-content w3-display-container">
+
+<div class="w3-display-container mySlides">
   <img src="psvr.jpg" style="width:100%">
-  <div class="text">Playstation VR - $349</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 6</div>
-  <img src="rifts.jpg" style="width:100%">
-  <div class="text">Oculus Rift S - $399</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 6</div>
-  <img src="googledaydream.jpg" style="width:100%">
-  <div class="text">Google Daydream - $99 </div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">4 / 6</div>
-  <img src="htc.jpg" style="width:100%">
-  <div class="text">HTC Vive - $474.99 </div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">5 / 6</div>
-  <img src="labo.jpg" style="width:100%">
-  <div class="text">Nintendo Labo VR - $79.99 </div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">6 / 6</div>
-  <img src="quest.jpg" style="width:100%">
-  <div class="text">Oculus Quest- $399 </div>
-</div>
-
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-  <span class="dot" onclick="currentSlide(4)"></span> 
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-</div>
- 
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+    Playstation VR - $349
   </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="rifts.jpg" style="width:100%">
+   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+    Oculus Rift S - $399
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="googledaydream.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+    Google Daydream - $99 
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="img_forest.jpg" style="width:100%">
+   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+    HTC Vive - $474.99 
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="labo.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+    Nintendo Labo VR - $79.99 
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="img_forest.jpg" style="width:100%">
+   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+    Oculus Quest- $399
+  </div>
+</div>
+
+<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
+</div>
 
 <p>
 In the gallery above you can see all the current VR technology available as well as their price. Many of the Headsets available are specific to their console and cannot be used on other devices, they also require you to have console already. The mobile HMDs are generally cheaper and specific ones such as the google daydream require you to have an android phone to be able to use. While other devices would require you to have computer. 
