--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -4,6 +4,7 @@
 <head>
 <!-- Metadata -->
 <link rel="stylesheet" type="text/css" href="design.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .mySlides {display:none;}
@@ -27,10 +28,7 @@
 </div>
 
 
-<div class="w3-container">
-  <h2>Slideshow Caption</h2>
-  <p>Add a caption text for each image slide with the w3-display-* classes (topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle).</p>
-</div>
+
 
 <div class="w3-content w3-display-container">
 
