--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="img_forest.jpg" style="width:100%">
+  <img src="htc.jpg" style="width:100%">
    <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
     HTC Vive - $474.99 
   </div>
@@ -68,7 +68,7 @@
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="img_forest.jpg" style="width:100%">
+  <img src="quest.jpg" style="width:100%">
    <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
     Oculus Quest- $399
   </div>
