--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -80,7 +80,7 @@
 </div>
 
 <p>
-In the gallery above you can see all the current VR technology available as well as their price. Many of the Headsets available are specific to their console and cannot be used on other devices, they also require you to have console already. The mobile HMDs are generally cheaper and specific ones such as the google daydream require you to have an android phone to be able to use. While other devices would require you to have computer. 
+In the gallery above you can see some of the Virtual Reality technology on offer right as well as their prices. It is important to note that these are just the prices of headsets and you will require add ons on top of them to use them properly. Some of the Headsets available are specific to the console of the company that made them and thus you are expected to have to console already to use them. Some of the cheacper headsets require you to have a Android phone that you can place inside the headset to use such as the google daydream. While other deivces such as the Oculus devices require a high end PC to use effectively. 
 </p>
 
 </body>
