--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -27,10 +27,9 @@
   <a href="../References/main.html">References</a>
 </div>
 
-
-  <h2>Availible Virtual Reality Technology </h2>
-  
-
+<div class="w3-container">
+    <h3>Availible Virtual Reality Technology </h3>
+  </div>
 
 <div class="w3-content w3-display-container">
 
