--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -81,7 +81,7 @@
 </div>
 
 <p>
-In the gallery above you can see some of the Virtual Reality technology on offer right as well as their prices. It is important to note that these are just the prices of headsets and you will require add ons on top of them to use them properly. Some of the Headsets available are specific to the console of the company that made them and thus you are expected to have to console already to use them. Some of the cheacper headsets require you to have a Android phone that you can place inside the headset to use such as the google daydream. While other deivces such as the Oculus devices require a high end PC to use effectively. 
+In the gallery above you can see some of the Virtual Reality technology on offer right now as well as their prices. It is important to note that these are just the prices of headsets and you will require add ons on top of them to use them properly. Some of the Headsets available are specific to the console of the company that made them and thus you are expected to have to console already to use them. Some of the cheaper headsets require you to have a Android phone that you can place inside the headset to use such as the google daydream.<a href="https://3g.co.uk/guides/what-smartphones-work-with-virtual-reality">Here is a list of phones compatible with VR headsets.</a> While other deivces such as the Oculus devices require a high end PC to use effectively. 
 </p>
 
 </body>
