--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -82,8 +82,35 @@
 
 <p>
 In the gallery above you can see some of the Virtual Reality technology on offer right now as well as their prices. It is important to note that these are just the prices of headsets and you will require add ons on top of them to use them properly. Some of the Headsets available are specific to the console of the company that made them and thus you are expected to have to console already to use them. Some of the cheaper headsets require you to have a Android phone that you can place inside the headset to use such as the google daydream.<a href="https://3g.co.uk/guides/what-smartphones-work-with-virtual-reality">Here is a list of phones compatible with VR headsets.</a> While other deivces such as the Oculus devices require a high end PC to use effectively. 
-</p>
+Below you can see a few of the motion controllers avaible right now. 
+ </p>
+<div class="w3-display-container mySlides">
+  <img src="reactive.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+    Reactive Grip - $ 600
+  </div>
+</div>
 
+<div class="w3-display-container mySlides">
+  <img src="striker.png" style="width:100%">
+   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+    Striker VR - $2,800
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="touch.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+    Oculus Touch Half Moon - $99 
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="cyber.jpg" style="width:100%">
+   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+    Cybertouch II
+  </div>
+</div>
 </body>
 </html>
 
