--- a/Current_VR/main.html
+++ b/Current_VR/main.html
@@ -111,6 +111,10 @@ In the gallery above you can see some of the Virtual Reality technology on offer
     Cybertouch II
   </div>
 </div>
+<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
+</div>
 </body>
 </html>
 
